refactor: GameResult 내 DealerResult 생성 로직 삭제
DealerResult 정적 팩토리 메서드 추가